CI: update the list of supported Linux distros
Since commit e771da446c511462524b1db0360ccbfb885db540, feeLLGood uses
the C++17 parallel algorithms, which are supported by GCC only since
version 9. Drop support for the Linux distributions shipping an older
version of GCC:

 - Ubuntu 18.04 "bionic"
 - Debian 9 "stretch" and 10 "buster"
 - CentOS 8
 - Rocky Linux 8

Add support for the recently released Rocky Linux 9. Use the Vagrant
box generic/rocky9 rather than rockylinux/9, as the latter seems
broken[1] and does not support the "virtualbox" provider.

Remove from install-dependencies.sh some kludges that were needed for
installing the required packages on CentOS 8 and Rocky Linux 8, and are
not useful anymore.

[1] https://app.vagrantup.com/rockylinux/boxes/9 says: "This box has no
    released versions. It will not be available from vagrant box add,
    nor will it show up in search results."

--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -33,11 +33,6 @@ Vagrant.configure("2") do |config|
     machine.vm.box = "ubuntu/focal64"
   end
 
-  # Ubuntu 18.04 LTS "Bionic Beaver"
-  config.vm.define "ubuntu_bionic", autostart: false do |machine|
-    machine.vm.box = "ubuntu/bionic64"
-  end
-
   # Debian Testing, future Debian 12 "Bookworm"
   config.vm.define "debian_testing", autostart: false do |machine|
     machine.vm.box = "debian/testing64"
@@ -48,33 +43,9 @@ Vagrant.configure("2") do |config|
     machine.vm.box = "debian/bullseye64"
   end
 
-  # Debian 10 "Buster", released 2019-07-06
-  config.vm.define "debian_buster", autostart: false do |machine|
-    machine.vm.box = "debian/buster64"
-    machine.vm.synced_folder "..", "/home/vagrant/host-FeeLLGood",
-      disabled: true  # not supported
-  end
-
-  # Debian 9 "Stretch", released 2017-06-17
-  config.vm.define "debian_stretch", autostart: false do |machine|
-    machine.vm.box = "debian/stretch64"
-    machine.vm.synced_folder "..", "/home/vagrant/host-FeeLLGood",
-      disabled: true  # not supported
-  end
-
-  # CentOS 8, released 2019-09-24, EOL 2021-12-31
-  config.vm.define "centos_8", autostart: false do |machine|
-    machine.vm.box = "centos/8"
-    machine.vm.hostname = "centos-8"
-    machine.vm.synced_folder "..", "/home/vagrant/host-FeeLLGood",
-      disabled: true  # not supported
-  end
-
-  # Rocky Linux 8, released 2021-06-21 as 8.4 "Green Obsidian"
-  config.vm.define "rockylinux_8", autostart: false do |machine|
-    machine.vm.box = "rockylinux/8"
-    machine.vm.hostname = "rockylinux-8"
-    machine.disksize.size = "10GB"
+  # Rocky Linux 9, released 2022-07-14 as 9.0 "Blue Onyx"
+  config.vm.define "rockylinux_9", autostart: false do |machine|
+    machine.vm.box = "generic/rocky9"
   end
 
 end
