Rewrite computation of the basis vectors (ep, eq)
The current algorithm for building the local basis (u0, ep, eq) is:

1. draw two random numbers (θ, φ) uniformly distributed in [0, π) and
   [0, 2π) respectively

2. build the random unit vector ζ from the spherical coordinates (θ, φ)

3. set ep = ζ × u0 and normalize it

4. set eq = u0 × ep and normalize it.

This algorithm has two issues:

 - the probability density of ζ is not isotropic, and even diverges
   along the directions ±z

 - when ζ falls very close to u0, the computation of the vector product
   ζ × u0 suffers from catastrophic cancellation and yields a vector ep
   which is not quite orthogonal to u0.

Fix both issues by adopting a completely different algorithm:

1. set ep to the unit vector along x, y or z, whichever is furthest away
   from the direction of u0

2. orthonormalize the (u0, ep) basis using the Gram–Schmidt process

3. set eq = u0 × ep

4. rotate the (ep, eq) pair in its plane by a random angle uniformly
   distributed in [0, 2π).

If PARANOID_ORTHONORMALIZATION is defined to `true' in config.h.in, an
extra Gram–Schmidt orthonormalization is performed on (u0, ep, eq) in
order to reduce the rounding errors. This is likely futile: a test on
full_test.py showed orthonormality errors never larger than 5.55112e-16,
i.e. 2.5 * DBL_EPSILON.

--- a/config.h.in
+++ b/config.h.in
@@ -41,6 +41,9 @@ const double BOHRS_MUB = CHARGE_ELECTRON*PLANCKS_HBAR/(2.*MASS_ELECTRON); /**< C
 /** for debugging purpose, some determinist pseudo random number for ep,eq vector basis can be used */
 #define RAND_DETERMINIST true
 
+/** do an extra orthonormalization of the (u0, ep, eq) basis in order to minimize the rounding errors */
+#define PARANOID_ORTHONORMALIZATION false
+
 /** theta of the theta integration scheme in time */
 #define THETA 0.5
 
