CI: update ccache directory in workflow
Since GitHub upgraded their "ubuntu-latest" runners to Ubuntu 22.04, the
default ccache directory moved from ~/.ccache to ~/.cache/ccache, which
makes the cache action fail to cache with the following message:

    Warning: Path Validation Error: Path(s) specified in the action
    for caching do(es) not exist, hence no cache is being saved.

Update the workflow definition in order to cache the new path.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     - name: restore cache
       uses: actions/cache@v3
       with:
-        path: ~/.ccache
+        path: ~/.cache/ccache
         key: ccache-${{ steps.id-machine.outputs.arch }}-${{ github.sha }}
         restore-keys: ccache-${{ steps.id-machine.outputs.arch }}-
 
