Fix misleading comments in default-settings.yml
The comments in the file imply that the region names are numeric, which
is no longer the case since commit 224b7f5adb. Fix them, and use
"main_volume" instead of "300" for the example volume name.

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -13,8 +13,8 @@
 #   mesh:                   # ‘mesh’ section
 #     filename: foo.msh     # a setting in the ‘mesh’ section
 #     volume_regions:       # a sub-section of ‘mesh’
-#       300:                # a sub-section of ‘volume_regions’
-#         Ae: 1.5e-11       # a setting in the ‘300’ section
+#       main_volume:        # a sub-section of ‘volume_regions’
+#         Ae: 1.5e-11       # a setting in the ‘main_volume’ section
 #
 # For a short primer on the YAML syntax, see
 # https://getopentest.org/reference/yaml-primer.html
@@ -93,7 +93,7 @@ mesh:
     # Defaults that apply to all regions. Note that ‘__default__’ is not
     # a valid region name: it is a placeholder for the defaults. In the
     # user-supplied configuration file, ‘__default__’ should be replaced
-    # by the region name, typically a number starting at 300.
+    # by the region name.
     __default__:
 
       # Exchange constant.
