--- a/config.h.in
+++ b/config.h.in
@@ -52,4 +52,7 @@ const double BOHRS_MUB = CHARGE_ELECTRON*PLANCKS_HBAR/(2.*MASS_ELECTRON); /**< C
 /** USER_TOL is tolerance for 'unit' vector input values : if abs(norm(x)-1) < USER_TOL then x is a unit vector */
 #define USER_TOL 1e-4
 
+/** PRECISION_STT is the number of digits in the output text file for electrostatic potential V.sol */
+#define PRECISION_STT 7
+
 #endif //CONFIG_H
