--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,11 +52,11 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET(HEADERS config.h pt3D.h node.h mag_parser.h mesh.h electrostatSolver.h spinTransferTorque.h
     time_integration.h feellgoodSettings.h tetra.h facette.h triangle.h surface.h linear_algebra.h
-    log-stats.h tags.h)
+    log-stats.h tags.h chronometer.h)
 
 SET(SOURCES mag_parser.cpp time_integration.cpp feellgoodSettings.cpp
     solver.cpp tetra.cpp facette.cpp read.cpp save.cpp tags.cpp
-    linear_algebra.cpp energy.cpp recentering.cpp tiny.h)
+    linear_algebra.cpp energy.cpp recentering.cpp tiny.h chronometer.cpp)
 
 configure_file(config.h.in ./config.h)
 
