--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -43,7 +43,8 @@ Vagrant.configure("2") do |config|
 
   # Rocky Linux 9, released 2022-07-14 as 9.0 "Blue Onyx"
   config.vm.define "rockylinux_9", autostart: false do |machine|
-    machine.vm.box = "generic/rocky9"
+    machine.vm.box = "rockylinux/9"
+    machine.vm.hostname = "rockylinux-9"
   end
 
 end
