--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ endif()
 install(TARGETS feellgood RUNTIME DESTINATION bin)
 install(PROGRAMS ./tools/convert2vtk DESTINATION bin)
 install(PROGRAMS ./tools/convert2hdf5 DESTINATION bin)
+install(PROGRAMS ./tools/h5extract DESTINATION bin)
 
 #===========================================================================
 # unit tests, by default it is not built.
