CMakeLists: honor CMAKE_INSTALL_PREFIX for python-modules
Do not force the installation to be in /usr/local. This makes an
unprivileged install possible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,11 +84,11 @@ string(
 # system Python on Debian and Debian-like systems. This is our preferred
 # install location, and it will be used if it exists. The second one should
 # work with any non-Debianized Python interpreter.
-set(PY_DIST_DIR "/usr/local/lib/python${PYTHON_VERSION}/dist-packages")
-set(PY_SITE_DIR "/usr/local/lib/python${PYTHON_VERSION}/site-packages")
+set(PY_DIST_DIR "lib/python${PYTHON_VERSION}/dist-packages")
+set(PY_SITE_DIR "lib/python${PYTHON_VERSION}/site-packages")
 
 # Select the best available installation directory.
-if(EXISTS ${PY_DIST_DIR})
+if(EXISTS "${CMAKE_INSTALL_PREFIX}/${PY_DIST_DIR}")
     set(PY_MODULES_DIR "${PY_DIST_DIR}/feellgood")
 elseif(PYTHON_VERSION)
     set(PY_MODULES_DIR "${PY_SITE_DIR}/feellgood")
@@ -97,7 +97,7 @@ endif()
 # Install the python modules if we found a suitable location.
 if(DEFINED PY_MODULES_DIR)
     install(DIRECTORY python-modules/ DESTINATION ${PY_MODULES_DIR})
-    message(STATUS "Python modules will be installed in ${PY_MODULES_DIR}")
+    message(STATUS "Python modules will be installed in ${CMAKE_INSTALL_PREFIX}/${PY_MODULES_DIR}")
 else()
     message(WARNING "Python modules will not be installed.")
 endif()
