--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -31,9 +31,14 @@ Vagrant.configure("2") do |config|
     machine.vm.box = "ubuntu/focal64"
   end
 
-  # Debian Testing, future Debian 12 "Bookworm"
+  # Debian Testing, future Debian 13 "Trixie"
   config.vm.define "debian_testing", autostart: false do |machine|
     machine.vm.box = "debian/testing64"
+  end
+
+  # Debian 12 "Bookworm", released 2023-06-10
+  config.vm.define "debian_bookworm", autostart: false do |machine|
+    machine.vm.box = "debian/bookworm64"
   end
 
   # Debian 11 "Bullseye", released 2021-08-14
