Replace exprtk with Duktape
Duktape is a compact, easy to integrate embeddable JavaScript engine.[1]
Use it, instead of exprtk, to reimplement MagnetizationParser and
TimeDepFieldParser, without touching their interface. The expressions of
the initial magnetization provided by the user can be converted into
JavaScript function expressions by this string concatenation:

    "function(x,y,z) { return (" + expression + "); }"

Update the documentation files README.md and License.txt accordingly.
Also update install-dependencies.sh in order to install Duktape instead
of exprtk.

Tests show a spectacular reduction in build time and binary size. These
were measured by doing a clean build on an Intel Xeon W-2255 (10 cores,
20 threads), with `make -j 20`, no ccache, and a warm disk cache.
Duktape was linked statically in order to make the size comparison fair:

                            exprtk    duktape
        ─────────────────────────────────────
        build time (s)      52.257      5.316
        binary size     12,440,856  1,409,112

There is no measurable difference in feeLLGood's performance.

Note that the set of primitives available for building expressions has
changed: these are now interpreted according to the standard JavaScript
syntax, with the addition that all properties of the `Math` object can
be accessed without the `Math.` prefix. Worth noting:

 * π is `PI` (in upper case)

 * the exponentiation operator is `**`

 * the `random()` function returns a pseudo-random number within [0, 1)

[1] https://duktape.org/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ add_custom_command(
 
 ADD_EXECUTABLE(feellgood main.cpp ${HEADERS} ${SOURCES} default-settings.o)
 
-TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm ANN TBB::tbb)
+TARGET_LINK_LIBRARIES(feellgood yaml-cpp scalfmm duktape ANN TBB::tbb)
 
 #===========================================================================
 # Find where to install the Python modules.
