--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ set(CMAKE_CXX_FLAGS
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
-SET(HEADERS config.h pt3D.h node.h expression_parser.h mesh.h electrostatSolver.h
+SET(HEADERS config.h vecND.h pt3D.h node.h expression_parser.h mesh.h electrostatSolver.h
     spinTransferTorque.h time_integration.h feellgoodSettings.h tetra.h
     facette.h triangle.h surface.h linear_algebra.h log-stats.h tags.h
     chronometer.h element.h tiny.h)
