--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ install(TARGETS feellgood RUNTIME DESTINATION bin)
 install(PROGRAMS ./tools/convert2vtk DESTINATION bin)
 install(PROGRAMS ./tools/convert2hdf5 DESTINATION bin)
 install(PROGRAMS ./tools/h5extract DESTINATION bin)
+install(PROGRAMS ./tools/fg-merge-sol DESTINATION bin)
 
 #===========================================================================
 # unit tests, by default it is not built.
