Default settings: fix doc of evol columns
Fix the comment listing the available columns for the evol file:

* Hx, Hy and Hz are available since commit 776cf4bb6c
* DW_z has been removed in commit 5d7b0a82ad

--- a/default-settings.yml
+++ b/default-settings.yml
@@ -55,7 +55,9 @@ outputs:
   # - <dMy/dt>: average change rate of My
   # - <dMz/dt>: average change rate of Mz
   # - E_aniso: anisotropy energy
-  # - DW_z: domain wall position along z
+  # - Hx: applied field along x
+  # - Hy: applied field along y
+  # - Hz: applied field along z
   evol_columns:
     - t         # time
     - <Mx>      # Average value of Mx
