CMakeLists: Remove reference to MKL_LD_FLAGS
This should be removed from CMAKE_EXE_LINKER_FLAGS for several reasons:

* It is misspelled: it should be MKL_LDFLAGS.

* If correctly spelled, it would expand to a semicolon-separated list,
  which would not be understood by the compiler.

* The variable CMAKE_EXE_LINKER_FLAGS is meant to hold linker flags only
  (e.g. -L<some dir>), not libraries.

* The MKL libraries are already given to target_link_libraries().

While we are at it, prettify the output of MKL_CFLAGS and MKL_LDFLAGS,
even though commented-out, by expanding within quotes and adding a space
after “=”.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(MKL QUIET IMPORTED_TARGET mkl-dynamic-lp64-iomp)
 if(MKL_FOUND)
     message(STATUS "MKL Found")
-    #message(STATUS "MKL compile options =" ${MKL_CFLAGS})
-    #message(STATUS "MKL LD flags =" ${MKL_LDFLAGS})
+    #message(STATUS "MKL compile options = ${MKL_CFLAGS}")
+    #message(STATUS "MKL LD flags = ${MKL_LDFLAGS}")
     set(EIGEN_MKL_CFLAGS "-DEIGEN_USE_MKL_ALL -DMKL_DIRECT_CALL")  # -DMKL_DIRECT_CALL : not sure we need it, neither it does something
     set(MKL_INTERFACE lp64) # from eigen3 documentation, we need that to get eigen work with intel mkl
 else()
@@ -63,7 +63,7 @@ set(CMAKE_CXX_FLAGS
     "-DNDEBUG -DTBB_SUPPRESS_DEPRECATED_MESSAGES -Wall -Wextra -std=c++17 -O3 -march=native ${EIGEN_MKL_CFLAGS} ${MKL_CFLAGS}"
     CACHE STRING "C++ compiler flags used during builds." FORCE)
 
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MKL_LD_FLAGS} -fopenmp")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET(HEADERS config.h vecND.h pt3D.h node.h expression_parser.h mesh.h electrostatSolver.h
     spinTransferTorque.h time_integration.h feellgoodSettings.h tetra.h
