CI: add Vagrant machine image ubuntu_noble
This is the current development branch of Ubuntu, to be released as
Ubuntu 24.04 LTS "Noble Numbat".

--- a/ci-tests/Vagrantfile
+++ b/ci-tests/Vagrantfile
@@ -21,6 +21,11 @@ Vagrant.configure("2") do |config|
   ######################################################################
   # Distro-specific configuration.
 
+  # Ubuntu development branch, future 24.04 LTS "Noble Numbat"
+  config.vm.define "ubuntu_noble", autostart: false do |machine|
+    machine.vm.box = "ubuntu/noble64"
+  end
+
   # Ubuntu 22.04 LTS "Jammy Jellyfish"
   config.vm.define "ubuntu_jammy", autostart: false do |machine|
     machine.vm.box = "ubuntu/jammy64"
