--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -38,6 +38,9 @@ add_executable (test_ut_facette ${SOURCES})
 SET(SOURCES ../tetra.cpp ut_tetra.cpp)
 add_executable (test_ut_tetra ${SOURCES})
 
+SET(SOURCES ../tetra.cpp ut_energy.cpp)
+add_executable (test_ut_energy ${SOURCES})
+
 SET(SOURCES ../tetra.cpp ut_anisotropy.cpp)
 add_executable (test_ut_anisotropy ${SOURCES})
 
@@ -72,6 +75,14 @@ if (MKL_FOUND)
         )
 
     target_link_libraries(test_ut_tetra
+        ${Boost_FILESYSTEM_LIBRARY}
+        ${Boost_SYSTEM_LIBRARY}
+        ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+        TBB::tbb
+        PkgConfig::MKL
+        )
+
+    target_link_libraries(test_ut_energy
         ${Boost_FILESYSTEM_LIBRARY}
         ${Boost_SYSTEM_LIBRARY}
         ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
@@ -161,6 +172,7 @@ add_test (NAME ut_node COMMAND test_ut_node)
 add_test (NAME ut_element COMMAND test_ut_element)
 add_test (NAME ut_facette COMMAND test_ut_facette)
 add_test (NAME ut_tetra COMMAND test_ut_tetra)
+add_test (NAME ut_energy COMMAND test_ut_energy)
 add_test (NAME ut_anisotropy COMMAND test_ut_anisotropy)
 add_test (NAME ut_tiny COMMAND test_ut_tiny)
 add_test (NAME ut_time_int COMMAND test_ut_time_int)
